fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@ html {
   font-family: Georgia, serif;
   line-height: 1.5;
 }
+
 *, *::before, *::after {
   box-sizing: inherit;
 }
@@ -15,7 +16,7 @@ img {
 h1, h2 {
   color: #5d8432;
   text-transform: uppercase;
-  font-family: 'Patua One', cursive;
+  font-family: "Patua One", sans-serif;
 }
 
 figcaption {
@@ -27,6 +28,7 @@ figcaption {
 nav {
   font-size: 1.125rem;
   font-weight: bold;
+  font-family: sans-serif;
 }
 
 nav ol {
